...
                )
                .background(MaterialTheme.colors.surface)
                .fillMaxWidth()
                .padding(spacing.spaceMedium)
                .padding(end = spacing.spaceMedium) // text wont take over icon
                .onFocusChanged { onFocusChanged(it) }
                .testTag("search_textfield")
        )

        if(shouldShowHint) {
            Text(
                text = hint,
                style = MaterialTheme.typography.body1,
...
